# sierra_launcher_discontinued-

./: .gitignore  Cargo.toml  README.md  install-daemon.sh  install.sh  sierra-launcher-wrapper.sh  sierra-launcher.service
config/: Sierra
sh/: restore-wallpaper.service  restore-wallpaper.sh  sierra-launcher-wrapper.sh  sierra-launcher.service
src/: ipc.rs  main.rs
src/app/: message.rs  state.rs  subscription.rs  update.rs  view.rs
src/config/: mod.rs
src/panels/: app_list.rs  clipboard_panel.rs  clock.rs  current_window_manager.rs  current_window_manager_ui.rs  mod.rs  mpris_player.rs  music.rs  right_main_panels.rs  services.rs  services_bottom_row.rs  system.rs  system_services.rs  title_color.rs  wallpaper_panel.rs  weather.rs
src/panels/main/: app_list.rs  mod.rs  search_bar.rs
src/panels/media/: mod.rs  music.rs
src/panels/system/: mod.rs  services.rs  system_services.rs  wifi_panel.rs
src/panels/workspace/: current_window_manager.rs  current_window_manager_ui.rs  mod.rs
src/utils/: copy.rs  data.rs  mod.rs  monitor.rs  theme.rs  wallpaper_manager.rs  wifi_credentials.rs
