[package]
name = "sierra_launcher"
version = "0.1.0"
edition = "2021"

# Fast UI + still fast rebuilds
[profile.dev]
opt-level = 1              # huge runtime win, tiny compile cost
debug = 1
incremental = true
codegen-units = 16         # sweet spot (NOT 256)
panic = "unwind"
overflow-checks = false

# Speed up all dependencies in dev
[profile.dev.package."*"]
opt-level = 2              # makes iced/image MUCH faster
debug = false
codegen-units = 16

# Maximum runtime performance
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug = false

[dependencies]
sysinfo = { version = "0.31", features = ["system", "disk", "network"] }

iced = { version = "0.14", features = ["advanced", "image", "tokio"] }
iced_layershell = "0.14.2"

notify = "6.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.13"

regex = "1.11"
chrono = "0.4"
bincode = "1.3"
urlencoding = "2.1"

reqwest = { version = "0.11", features = ["blocking", "json"] }

dirs = "5.0"
mpris = "2.0"

lazy_static = "1.4"

wayland-client = "0.31"
wayland-protocols-wlr = "0.3"

tracing = "0.1"

fuzzy-matcher = "0.3"

rayon = "1.8"
parking_lot = "0.12"

wl-clipboard-rs = "0.9"
arc-swap = "1.7"

# Image decoding: minimal & fast
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[dependencies.gio]
version = "0.20"
features = ["v2_66"]
libc = "0.2.181"