[package]
name = "sierra_launcher"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
layer-shika = "0.3.1"
slint = "1.14.1"
notify = "8.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
layer-shika-adapters = "0.3.1"
[build-dependencies]
slint-build = "1.14.1"
